[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spayk"
version = "0.0.1"
authors = [
  { name="Aykut G. Gelen", email="aykut.gelen@erzincan.edu.tr" },
]
description = "Spayk: An open source environment for simulating spiking neural networks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aggelen/spayk"
"Bug Tracker" = "https://github.com/aggelen/spayk/issues"